[project]
name = "article-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "boto3>=1.43.38",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "ipykernel>=7.2.0",
    "openai>=2.29.0",
    "requests>=2.32.5",
]

